# Simple3Dgame

./: CMakeLists.txt  README.md  game.cpp  game.fs  game.vs
